--- a/course2-solution/css/style.css
+++ b/course2-solution/css/style.css
@@ -5,3 +5,24 @@ h1 {
 p {
    background-color: grey;
 }
+
+/*** Desktop layout ***/
+@media (min-width: 992px){
+    p {
+       background-color: red;
+    }
+}
+
+/*** Tablet layout ***/
+@media (min-width: 768px) and (max-width: 991px) {
+    p {
+       background-color: blue;
+    }
+}
+
+/*** Mobile layout ***/
+@media (max-width: 767px) {
+    p {
+       background-color: green;
+    }
+}
