Desktop layout consists of 3 sections of equal width (use the 12-column grid design)

--- a/course2-solution/css/style.css
+++ b/course2-solution/css/style.css
@@ -8,8 +8,10 @@ p {
 
 /*** Desktop layout ***/
 @media (min-width: 992px){
-    p {
-       background-color: red;
+    .col-desk-4{
+        width: 33.32%;
+        background-color: red;
+        float: left;
     }
 }
 
