--- a/course2-solution/css/style.css
+++ b/course2-solution/css/style.css
@@ -1,6 +1,7 @@
 *{
     box-sizing: border-box;
 }
+
 body{
     margin: 0;
     padding: 0;
@@ -17,29 +18,36 @@ p {
 
 #section1, #section2, #section3{
     position: relative;
-    padding: 10px;
-    border: 1px solid;
+    padding: 0px;
+}
+
+.section-content {
+    margin: 10px;
+    border: 1px solid black;
+    background-color: grey;
 }
 
 .anchor {
     position: relative;
-    padding-bottom: 30px;
-    border: 5px solid black;
+    padding-bottom: 35px;
+    /* border: 5px solid black;*/
 }
 
 .section-title{
    background-color: purple;
    position: absolute;
-   top: 5px;
-   right: 10px;
+   right: 0px;
+   border: 1px solid black;
+   padding: 10px
 }
 
 /*** Desktop layout ***/
 @media (min-width: 992px){
     .col-desk-4{
-        width: 33.32%;
-        background-color: red;
+        width: 33%;
+       /* background-color: red; */
         float: left;
+       /* border: 1px solid blue; */
     }
 }
 
