--- a/course2-solution/css/style.css
+++ b/course2-solution/css/style.css
@@ -8,7 +8,8 @@ body{
 }
 
 h1 {
-  background-color: green;
+  background-color: white;
+
 }
 
 p {
@@ -21,15 +22,28 @@ p {
     padding: 0px;
 }
 
-.section-content {
+#section1-title{
+    background-color: #FFD5D4;
+}
+
+#section2-title{
+    color: white;
+    background-color: #8a2424;
+}
+
+#section3-title{
+    background-color: #FFE1C0;
+}
+
+.section-content{
     margin: 10px;
-    border: 1px solid black;
+    border: 2px solid black;
     background-color: grey;
 }
 
-.anchor {
+.anchor{
     position: relative;
-    padding-bottom: 35px;
+    padding-bottom: 40px;
     /* border: 5px solid black;*/
 }
 
@@ -37,8 +51,9 @@ p {
    background-color: purple;
    position: absolute;
    right: 0px;
-   border: 1px solid black;
-   padding: 10px
+   border: 2px solid black;
+   padding: 10px;
+   font-size: 1.25em;
 }
 
 /*** Desktop layout ***/
@@ -55,7 +70,7 @@ p {
 @media (min-width: 768px) and (max-width: 991px) {
     .col-tabl-6, .col-tabl-12{
        float: left;
-       background-color: blue;
+       /* background-color: blue; */
     }
     .col-tabl-6{
        width: 50%;
@@ -70,6 +85,6 @@ p {
     .col-mobi-12{
        width: 100%;
        float: left;
-       background-color: green;
+       /* background-color: green; */
     }
 }
