--- a/course2-solution/css/style.css
+++ b/course2-solution/css/style.css
@@ -3,14 +3,17 @@
 }
 
 body{
-    margin: 0;
+    margin:10px;
     padding: 0;
 }
 
 h1 {
   background-color: white;
   text-align: center;
-
+  margin-top: 40px;
+  margin-bottom: 50px;
+  font-size: 1.75em;
+  font-size: 1.75em;
 }
 
 p {
